--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#top" class="smoothScroll"><span>Home</span></a></li>
-            <li><a href="#about" class="smoothScroll"><span>About Us</span></a></li>
+            <li><a href="#about" class="smoothScroll"><span>About</span></a></li>
             <li><a href="#gallery" class="smoothScroll"><span>Projects</span></a></li>
             <li><a href="#contact" class="smoothScroll"><span>Contact</span></a></li>
           </ul>
